Insta link update

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p class="text-big">Sports Programmer||Web Developer</p>
                 <p class="text-small">Shivesh Ranjan aka "Derex".</p>
                 <div class="buttons">
-                    <a href="https://instagram.com/derex1.0?utm_medium=copy_link"><button class="btn">Instagram</button></a>
+                    <a href="https://instagram.com/derex_ig"><button class="btn">Instagram</button></a>
                     <a href="https://www.linkedin.com/in/shivesh-ranjan"><button class="btn">LinkedIn</button></a>
                 </div>
             </div>
