--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="logo"><img src="img/logo.jpg" alt="logo"></div>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#blog">Blog</a></li>
+            <li><a href="https://github.com/shivesh-ranjan">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="rightNav v-class-resp">
@@ -30,10 +30,10 @@
     <section class="background firstSection" id="home">
         <div class="box-main">
             <div class="firstHalf">
-                <p class="text-big">Sports Programmer||Web Developer</p>
-                <p class="text-small">Shivesh Ranjan aka "Derex".</p>
+                <p class="text-big">Hi, I'm 𝗗𝗲𝗿𝗲𝘅👋</p>
+                <p class="text-small">Web Developer || ML Enthusiast || Sports Programmer</p>
                 <div class="buttons">
-                    <a href="https://instagram.com/derex_ig"><button class="btn">Instagram</button></a>
+                    <a href="https://github.com/shivesh-ranjan"><button class="btn">Git Hub</button></a>
                     <a href="https://www.linkedin.com/in/shivesh-ranjan"><button class="btn">LinkedIn</button></a>
                 </div>
             </div>
@@ -46,7 +46,11 @@
     <section class="section">
         <div class="paras">
         <p class="sectionTag text-big" id="about">About Me</p>
-        <p class="sectionSubTag text-small">Hi, I am Shivesh, a first year undergrad CSE student. This website is my first web development project and is made with only html, css and javascript. Therefore, it has no backend so my contact page will not work. As you can tell that it is a very basic website, so if you want to watch my future projects then kindly follow me on socials linked above. You can also follow me on HackerRank and Codeforces. Thanks if you have made it till here.</p>
+        <p class="sectionSubTag text-small">
+            <p class="sectionSubTag text-small">-> I am a 1st year B.Tech AI&ML student at MAIT, Delhi.</p>
+            <p class="sectionSubTag text-small">-> am really in love with competitive programming and currently solving codeforces problems.</p>
+            <p class="sectionSubTag text-small">-> I am open for any interesting project!</p>
+        </p>
         </div>
         <div class="thumbnail">
             <img src="img/me2.jpg" alt="photo">
@@ -54,9 +58,11 @@
     </section>
     <section class="section section-left">
         <div class="paras">
-        <p class="sectionTag text-big" id="blog">C++ vs Java</p>
-        <p class="sectionSubTag text-small">Whether it comes to competetive coding or development work, many beginners get confused about which language is best for the purpose? Both of these have their own perks. Java being still widely used in the industry and its similarity with kotlin makes it a good choice for learning. Whereas, C++ is one of the fastest programming languages and covers some concepts like pointers which are absent in Java. Choose C++ if you do competitive coding and Java for development as Java is widely used in open source. 
-        </p>
+        <p class="sectionTag text-big" id="blog">Projects</p>
+        <p class="sectionSubTag text-small">-> <a href="https://github.com/shivesh-ranjan/discord-music-bot">Discord Musicbot</a>: Play music using YT Urls, works like Rythm(now discontinued)</p>
+        <p class="sectionSubTag text-small">-> <a href="https://github.com/shivesh-ranjan/Meme-Share-App">MemeShare Android App</a>: Share random Reddit memes with your friends!</p>
+        <p class="sectionSubTag text-small">-> <a href="https://github.com/shivesh-ranjan/Friday">Friday</a>: Basically, it's a cheaper version of JARVIS.</p>
+        <p class="sectionSubTag text-small">-> and more on <a href="https://github.com/shivesh-ranjan">Git Hub</a></p>
         </div>
         <div class="thumbnail">
             <img src="https://source.unsplash.com/800x600/?coding" alt="photo">
@@ -64,9 +70,10 @@
     </section>
     <section class="section">
         <div class="paras">
-        <p class="sectionTag text-big">Fitness</p>
-        <p class="sectionSubTag text-small">This picture belongs to me, I love muscles inspite of being a nerd. Resistance training is very important of general health and strong body. Many coders ignore it thinking that it takes huge amount of time. But the fact is that I only workout for 30mins. Still got muscles in 1.5 months approx. Daily workout is the only thing that calms my mind. I think I am addicted to it, but still I never do exceed the limit of 30mins.
-        </p>
+        <p class="sectionTag text-big">Extras</p>
+        <p class="sectionSubTag text-small">-> I am a Bartitsu athlete(SHERLOCK HOLMES's fighting style)!</p>
+        <p class="sectionSubTag text-small">-> I love to read about psychology, specially the books written by Dr. Jordan Peterson!</p>
+        <p class="sectionSubTag text-small">-> I am also a musician(have released few songs on spotify) and taking a break for few years!</p>
         </div>
         <div class="thumbnail">
             <img src="img/me.jpg" alt="photo">
